[gd_scene load_steps=2 format=3 uid="uid://cqx84q3ul0cb1"]

[ext_resource type="Script" path="res://menu.gd" id="1_5wij2"]

[node name="Control" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5wij2")

[node name="pause_menu" type="Panel" parent="."]
layout_mode = 0
offset_left = 284.0
offset_top = 61.0
offset_right = 493.0
offset_bottom = 275.0
scale = Vector2(2.81159, 2.50369)

[node name="VBoxContainer" type="VBoxContainer" parent="pause_menu"]
custom_minimum_size = Vector2(0.115, 0)
layout_mode = 0
offset_left = 32.0
offset_top = 25.0
offset_right = 181.0
offset_bottom = 191.0

[node name="resume" type="Button" parent="pause_menu/VBoxContainer"]
layout_mode = 2
text = "resume"

[node name="settings" type="Button" parent="pause_menu/VBoxContainer"]
layout_mode = 2
text = "settings
"

[node name="quit" type="Button" parent="pause_menu/VBoxContainer"]
layout_mode = 2
text = "quit
"

[node name="Settings" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 290.0
offset_top = 62.0
offset_right = 499.0
offset_bottom = 276.0
scale = Vector2(0.974964, 1.00804)

[node name="back" type="Button" parent="Settings"]
layout_mode = 0
offset_right = 23.0
offset_bottom = 31.0
scale = Vector2(1.18738, 0.922706)
text = "<-"

[node name="VBoxContainer" type="VBoxContainer" parent="Settings"]
custom_minimum_size = Vector2(0.115, 0)
layout_mode = 0
offset_left = 32.0
offset_top = 25.0
offset_right = 181.0
offset_bottom = 191.0

[node name="Label" type="Label" parent="Settings/VBoxContainer"]
layout_mode = 2
text = "sens
"

[node name="HSlider" type="HSlider" parent="Settings/VBoxContainer"]
layout_mode = 2
min_value = 0.1
max_value = 1.0
step = 0.0
value = 0.1

[connection signal="pressed" from="pause_menu/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="button_down" from="pause_menu/VBoxContainer/settings" to="." method="_on_settings_button_down"]
[connection signal="button_down" from="pause_menu/VBoxContainer/quit" to="." method="_on_quit_button_down"]
[connection signal="pressed" from="Settings/back" to="." method="_on_back_pressed"]
